--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-LINKEDIN_CLIENT_ID=your_client_id_here
-LINKEDIN_CLIENT_SECRET=your_client_secret_here
-LINKEDIN_REDIRECT_URI=http://127.0.0.1:8000/auth/linkedin/callback
+LINKEDIN_CLIENT_ID=86hl84ozj2rozu
+LINKEDIN_CLIENT_SECRET=WPL_AP1.5AsPhFAUhYbatICg.gbFDSA==
+LINKEDIN_REDIRECT_URI=https://linkedin-ai-agent-mixq.onrender.com/auth/linkedin/callback
 OPENAI_API_KEY=your_openai_key_here
 
